# ChangeLog for x11-libs/xforms
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/xforms/ChangeLog,v 1.41 2008/02/24 17:38:57 ranger Exp $

  24 Feb 2008; Brent Baude <ranger@gentoo.org> xforms-1.0.90-r1.ebuild:
  Marking xforms-1.0.90-r1 ppc64 for bug 209465

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  xforms-1.0.90-r1.ebuild:
  Drop virtual/x11 references.

  20 Feb 2007; Christian Heim <phreak@gentoo.org>
  files/xforms-1.0.90-Makefile.am.patch:
  I used the wrong order to create the patch, the as-needed one is applied
  before the Makefile.am one, so changes stuff in Makefile.am before the
  Makefile patch is applied and breaks the latter one.

  18 Feb 2007; Fabian Groffen <grobian@gentoo.org> xforms-1.0.90-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  18 Feb 2007; Christian Heim <phreak@gentoo.org>
  +files/xforms-1.0.90-Makefile.am.patch, xforms-1.0.90-r1.ebuild:
  Fixing breakage w/ fdesign/Makefile.am and lib/Makefile.am (eleminating the
  remaining commented out lines, that make automake fail badly) thanks to
  Fabian Groffen and Bo Orsted Andresen <bo.andresen at zlin.dk> in #161857.

  22 Nov 2006; Charlie Shepherd <masterdriverz@gentoo.org> ChangeLog:
  Add patch to build with --as-needed, thanks to Robert Marmorstein, bug 140179

  25 Sep 2006; Markus Rothe <corsair@gentoo.org> xforms-1.0.90-r1.ebuild:
  Added ~ppc64; bug #149013

  05 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -xforms-1.0-r1.ebuild, -xforms-1.0.90.ebuild:
  clean out old, non-modX ebuilds

  04 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  xforms-1.0.90-r1.ebuild:
  Stable on sparc wrt #145092

  03 Sep 2006; Joshua Jackson <tsunam@gentoo.org> xforms-1.0.90-r1.ebuild:
  stable x86; bug #145092

  02 Sep 2006; <blubb@gentoo.org> xforms-1.0.90-r1.ebuild:
  stable on amd64

  26 Aug 2006; <nixnut@gentoo.org> xforms-1.0.90-r1.ebuild:
  Stable on ppc wrt bug #145092
