@@ -1,6 +1,6 @@
 AUX xforms-1.0.90-Makefile.am.patch 581 RMD160 c01d3290aa7d3ed186fb9ef31db92fc2593992b6 SHA1 38498aeb132d704a06ac440e003efcf488d83c8f SHA256 12f23e3281d99c44dcf407663cd2c9bc5d8d087029e99950af302d2e512c3d6c
 AUX xforms-1.0.90-as-needed.patch 385 RMD160 d9ae84e4d606517d5d7117cd131657a8b935e411 SHA1 a0dadb93154d7a2125730e078b743c94ee1b9cf9 SHA256 4a29747c95550ec1dcf94ac657cc878434a6dca3f28c608692a4483fa4579d8a
 DIST xforms-1.0.90.tar.gz 992072 RMD160 f709bea1e2c3a867092e7cc4c7c5c1c60055b6e3 SHA1 7ef0655d1ba481a09af643455ec11afdcc28ce8a SHA256 e505cd9cdaef160575f9132b1a5fef3d0675bf801a901075ad17a8daca31a49a
-EBUILD xforms-1.0.90-r1.ebuild 992 RMD160 7025bb1c0b3b6f7737de27dae223a86490615865 SHA1 2e4f0a57da24b03551f8d5f202e58160b0c7dd29 SHA256 fefc9ed90c8a31c2db5c7f4c038531a84c4ff3aba52c7ef2ca0116edbb7b928c
-MISC ChangeLog 6192 RMD160 a6bb7fd6081ecdc5ca14a5f9721984f87ae2af31 SHA1 35dec5e4f8be368ea4bb5095cbb6a64bd9162c8e SHA256 8d3d769f88599d824db7625e1f30babddc40170aa11bb61a521c3d2941f4bc33
+EBUILD xforms-1.0.90-r1.ebuild 1054 RMD160 d61260d824051798f30d443c0abc2a932ad9e159 SHA1 a5fd55f47519af06252b477fecf2385f4a7c79db SHA256 593c2f6949a44d117fb802b9c4396b87bbb3ec47d2bb19992743706203d57bb3
+MISC ChangeLog 6361 RMD160 d54ed72894afea802c6124beb9e9671ddb1812a3 SHA1 e9fe7a5c764f418b11589ba7d7d5242eeadf91df SHA256 fa247ff5e5737ee5e29c182c3b3d6cf5b415550610d68884415f67facb2d91db
 MISC metadata.xml 232 RMD160 854b06094287201d0b98f2b21d36054db25d81cd SHA1 cc4f98e9ee0102aea687d71cf3af924cf156edbb SHA256 21382e863647add08888c924279a4b931b2b90ccd0cf5e526ee74a3d5e1fd0df
