@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/xforms
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/xforms/ChangeLog,v 1.41 2008/02/24 17:38:57 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/xforms/ChangeLog,v 1.42 2008/07/05 10:20:07 loki_val Exp $
+
+  05 Jul 2008; Peter Alfredsen <loki_val@gentoo.org>
+  xforms-1.0.90-r1.ebuild:
+  Fix for libtool-2.2 wrt bug #228213. Thanks to Rafał Mużyło
+  <galtgendo@o2.pl>.
 
   24 Feb 2008; Brent Baude <ranger@gentoo.org> xforms-1.0.90-r1.ebuild:
   Marking xforms-1.0.90-r1 ppc64 for bug 209465
